--- a/.github/workflows/spyder.yml
+++ b/.github/workflows/spyder.yml
@@ -6,6 +6,9 @@ on:
     - cron: "0 6 * * *"   # 每天 00:00 (UTC) 執行
   workflow_dispatch:        # 手動觸發
 
+permissions:
+  contents: write
+
 jobs:
   run-spiders:
     runs-on: ubuntu-latest
