--- a/.github/workflows/spyder.yml
+++ b/.github/workflows/spyder.yml
@@ -34,8 +34,8 @@ jobs:
 
       - name: Commit output files
         run: |
-          git config --global user.name "spyder-bot"
-          git config --global user.email "spyder-bot@gmail.com"
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
           git add static.json api.csv
-          git commit -m"daily"
-          git push origin main
+          git commit -m "Update from GitHub Actions" || echo "No changes"
+          git push
