--- a/.github/workflows/spyder.yml
+++ b/.github/workflows/spyder.yml
@@ -2,7 +2,7 @@ name: spyder
 run-name: spyder
 on:
   schedule:
-    - cron: "0 0 * * *"  # 每天 UTC 6:25 執行 (台灣時間下午2:25)
+    - cron: "0 0 * * *"  # 每天  8:00 執行
   workflow_dispatch:       # 手動執行也可以
 
 permissions:
